--- a/backend/src/Trading.Aggregator/Trading.Aggregator.csproj
+++ b/backend/src/Trading.Aggregator/Trading.Aggregator.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.13.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Trading.Contracts\Trading.Contracts.csproj" />
   </ItemGroup>
 </Project>
