--- a/backend/src/Trading.Aggregator/appsettings.Development.json
+++ b/backend/src/Trading.Aggregator/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetPriceTopic": "asset-price",
+    "AssetAnalyticsTopic": "asset-analytics",
+    "ConsumerGroup": "trading-aggregator"
   }
 }
