--- a/backend/src/Trading.Aggregator/appsettings.json
+++ b/backend/src/Trading.Aggregator/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetPriceTopic": "asset-price",
+    "AssetAnalyticsTopic": "asset-analytics",
+    "ConsumerGroup": "trading-aggregator"
   }
 }
