feat: Kafka producer in PriceGenerator and project references

--- a/backend/src/Trading.PriceGenerator/appsettings.Development.json
+++ b/backend/src/Trading.PriceGenerator/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetPriceTopic": "asset-price"
   }
 }
