--- a/backend/src/Trading.PriceGenerator/appsettings.json
+++ b/backend/src/Trading.PriceGenerator/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetPriceTopic": "asset-price"
   }
 }
