feat: add Trading.WebApi with SignalR hub and analytics consumer

--- a/backend/src/Trading.WebApi/appsettings.Development.json
+++ b/backend/src/Trading.WebApi/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetAnalyticsTopic": "asset-analytics",
+    "ConsumerGroup": "trading-webapi"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5173"
+    ]
   }
 }
