--- a/backend/src/Trading.WebApi/appsettings.json
+++ b/backend/src/Trading.WebApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AssetAnalyticsTopic": "asset-analytics",
+    "ConsumerGroup": "trading-webapi"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5173"
+    ]
+  }
 }
