feat: add CORS and SignalR to WebApi, translate frontend to English

--- a/backend/src/Trading.WebApi/appsettings.Development.json
+++ b/backend/src/Trading.WebApi/appsettings.Development.json
@@ -1,8 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
+  "Kafka": { "BootstrapServers": "localhost:9092" }
 }
