--- a/backend/src/Trading.WebApi/appsettings.json
+++ b/backend/src/Trading.WebApi/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
+  "AllowedHosts": "*",
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "AnalyticsTopic": "asset-analytics",
+    "ConsumerGroup": "trading-webapi"
   },
-  "AllowedHosts": "*"
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:5173" ]
+  }
 }
