--- a/backend/src/Trading.WebApi/Trading.WebApi.csproj
+++ b/backend/src/Trading.WebApi/Trading.WebApi.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Trading.Contracts\Trading.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
