feat: add PostgreSQL persistence for asset analytics in WebApi

--- a/backend/src/Trading.WebApi/appsettings.json
+++ b/backend/src/Trading.WebApi/appsettings.json
@@ -1,12 +1,20 @@
 {
-  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Database=trading;Username=trading;Password=trading"
+  },
   "Kafka": {
     "BootstrapServers": "localhost:9092",
     "AnalyticsTopic": "asset-analytics",
     "ConsumerGroup": "trading-webapi"
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:5173", "http://127.0.0.1:5173" ]
+    "AllowedOrigins": ["http://localhost:5173", "http://127.0.0.1:5173"]
   }
 }
